--- a/src/components/Film/Film.css
+++ b/src/components/Film/Film.css
@@ -1,14 +1,71 @@
+.film-main {
+  background-color: #181818;
+  color: white;
+  font-weight: 500;
+  padding-bottom: 3rem;
+}
+
 .film-backdrop {
   width: 100%;
 }
 
 .div-film-backdrop {
-    width: 95vw;
-    max-width: 900px;
-    margin: auto;
+  position: relative;
+  margin: auto;
+}
+
+.div-film-backdrop:after {
+  content: "";
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  left: 0;
+  top: 0;
+  background: linear-gradient(to bottom, transparent 85%, #181818 100%);
+}
+
+.film-info-group {
+  padding: 1rem 0 0;
+}
+
+.film-specific-info {
+  display: flex;
+  justify-content: start;
+  text-align: center;
+}
+
+.film-specific-info-item {
+  margin: 0 0.6rem 0 0;
+  height: 3rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.film-specific-info-item p {
+  margin: 0;
+}
+
+.film-info-certification {
+  border: 1px solid white;
+  padding: 0 2px;
+}
+
+.film-short-summary,
+.film-info-group-right {
+  font-size: 14px;
+  text-align: start;
 }
 
 .film-is-new {
   color: green;
   font-weight: bold;
+}
+
+.film-group-subtitle {
+  color: gray;
+}
+
+.film-genres {
+  margin: 1rem 0 0;
 }
