change mentions of film to movie for consistency

--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -3,23 +3,23 @@
   background-color: black;
 }
 
-.film-carousel {
+.movie-carousel {
   /* display: flex; */
   /* width: 100%; */
 }
 
-.film-div-img {
+.movie-div-img {
   /* margin: 0.5rem 0; */
   /* border: 1px solid blue; */
 }
 
-.film-poster-image {
+.movie-poster-image {
   border: 2px solid hsla(0, 0%, 100%, 0.8);
   border-radius: 10px;
   transition: transform 0.2s ease-in-out;
 }
 
-.film-poster-image:hover {
+.movie-poster-image:hover {
     transform: scale(1.1);
     cursor: pointer;
 }
